Update image and stylesheet paths in index.htm

--- a/index.htm
+++ b/index.htm
@@ -8,10 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
-  <link rel="icon" href="../re-assiment-week-3/images/Icons/leaf.png" />
-  <link rel="stylesheet" href="../re-assiment-week-3/css/all.min.css" />
-  <link rel="stylesheet" href="../re-assiment-week-3/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../re-assiment-week-3/css/index.css" />
+  <link rel="icon" href="images/Icons/leaf.png" />
+<link rel="stylesheet" href="css/all.min.css" />
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/index.css" />
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <style>
     html { scroll-behavior: smooth; }
@@ -156,7 +156,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -164,7 +164,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/2.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/2.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -172,7 +172,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/3.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/3.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -180,7 +180,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/4.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/4.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -188,7 +188,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/5.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/5.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -196,7 +196,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/6.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/6.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -212,7 +212,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/1.jpg" class="w-100" alt="" />
+<img src="images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -220,7 +220,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/2.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/2.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -228,7 +228,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/3.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/3.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -244,7 +244,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -252,7 +252,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/2.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/2.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -268,7 +268,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="../re-assiment-week-3/images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -359,7 +359,7 @@
 </div>
 
 <!-- Scripts -->
-<script src="../re-assiment-week-3/j.s/bootstrap.bundle.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script>
   var typed = new Typed("#element", {
     strings: ["developer", "designer"],
