--- a/index.htm
+++ b/index.htm
@@ -9,9 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
   <link rel="icon" href="images/Icons/leaf.png" />
-<link rel="stylesheet" href="css/all.min.css" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/index.css" />
+<link rel="stylesheet" href="./css/all.min.css" />
+<link rel="stylesheet" href="./css/bootstrap.min.css" />
+<link rel="stylesheet" href="./css/index.css" />
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <style>
     html { scroll-behavior: smooth; }
@@ -156,7 +156,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -164,7 +164,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/2.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/2.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -172,7 +172,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/3.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/3.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -180,7 +180,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/4.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/4.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -188,7 +188,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/5.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/5.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -196,7 +196,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/6.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/6.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -212,7 +212,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-<img src="images/portfolio/1.jpg" class="w-100" alt="" />
+<img src="./images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -220,7 +220,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/2.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/2.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -228,7 +228,7 @@
           </div>
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/3.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/3.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -244,7 +244,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -268,7 +268,7 @@
         <div class="pboxes d-flex flex-wrap">
           <div class="pbox col-4 p-3">
             <div class="cover">
-              <img src="images/portfolio/1.jpg" class="w-100" alt="" />
+              <img src="./images/portfolio/1.jpg" class="w-100" alt="" />
               <div class="player d-flex justify-content-end align-items-end p-3">
                 <i class="fa-solid fa-link"></i>
               </div>
@@ -316,7 +316,7 @@
   <div class="container d-flex flex-wrap justify-content-center gap-3">
     <div class="cover p-2 col-lg-4 col-md-6 col-12">
       <div class="blog">
-        <img src="../re-assiment-week-3/images/blog/12.jpg" alt="" class="w-100">
+        <img src="./re-assiment-week-3/images/blog/12.jpg" alt="" class="w-100">
         <div class="blog-content bg-white p-3">
           <p>23 November, 2015</p>
           <a href="#"><h4>Web Design Blog Post</h4></a>
@@ -338,7 +338,7 @@
     </div>
     <div class="cover p-2 col-lg-4 col-md-6 col-12">
       <div class="blog">
-        <img src="../re-assiment-week-3/images/blog/32.jpg" alt="" class="w-100">
+        <img src="./re-assiment-week-3/images/blog/32.jpg" alt="" class="w-100">
         <div class="blog-content bg-white p-3">
           <p>23 November, 2015</p>
           <a href="#">Web Design Blog Post</a>
