Update image paths in index.htm

--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,7 @@
   <div class="container p-5 d-flex flex-wrap">
     <div class="img-partition col-lg-4 col-md-5 col-12 mb-3">
       <div class="cover-photo">
-        <img src="../re-assiment-week-3/images/about.jpg" class="w-100" alt="About Me" />
+        <img src="./re-assiment-week-3/images/about.jpg" class="w-100" alt="About Me" />
         <div class="layer d-flex justify-content-center align-items-center text-white gap-2">
           <i class="fa-brands fa-facebook-f"></i>
           <i class="fa-brands fa-twitter"></i>
@@ -316,7 +316,7 @@
   <div class="container d-flex flex-wrap justify-content-center gap-3">
     <div class="cover p-2 col-lg-4 col-md-6 col-12">
       <div class="blog">
-        <img src="./re-assiment-week-3/images/blog/12.jpg" alt="" class="w-100">
+        <img src="./images/blog/12.jpg" alt="" class="w-100">
         <div class="blog-content bg-white p-3">
           <p>23 November, 2015</p>
           <a href="#"><h4>Web Design Blog Post</h4></a>
@@ -338,7 +338,7 @@
     </div>
     <div class="cover p-2 col-lg-4 col-md-6 col-12">
       <div class="blog">
-        <img src="./re-assiment-week-3/images/blog/32.jpg" alt="" class="w-100">
+        <img src="./images/blog/32.jpg" alt="" class="w-100">
         <div class="blog-content bg-white p-3">
           <p>23 November, 2015</p>
           <a href="#">Web Design Blog Post</a>
