Update image source path in index.htm

--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,7 @@
   <div class="container p-5 d-flex flex-wrap">
     <div class="img-partition col-lg-4 col-md-5 col-12 mb-3">
       <div class="cover-photo">
-        <img src="./re-assiment-week-3/images/about.jpg" class="w-100" alt="About Me" />
+        <img src="./images/about.jpg" class="w-100" alt="About Me" />
         <div class="layer d-flex justify-content-center align-items-center text-white gap-2">
           <i class="fa-brands fa-facebook-f"></i>
           <i class="fa-brands fa-twitter"></i>
